--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
-runs-on: ubuntu-latest
+name: 'Robot Framework Lint'
+description: 'Run Lint for Robot Framework'
 steps:
 - uses: actions/checkout@v2
 - name: Set up Python
