--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,5 @@
+name: 'Robot Framework Lint'
+description: 'Run lint for Robot Framework'
 steps:
 - uses: actions/checkout@v2
 - name: Set up Python
