--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,9 @@
 name: 'Robot Framework Lint'
 description: 'Run lint for Robot Framework'
+branding:
+  icon: 'check-square'  
+  color: 'green'
+  
 steps:
 - uses: actions/checkout@v2
 - name: Set up Python
