--- a/action.yml
+++ b/action.yml
@@ -16,8 +16,8 @@ branding:
             
 - name: Execute Lint
   run: |
-    chmod +x "${{ github.workspace }}/script.sh"
-    "${{ github.workspace }}/script.sh"
+    chmod +x "script.sh"
+    "script.sh"
      
      
      
