--- a/action.yml
+++ b/action.yml
@@ -16,8 +16,8 @@ branding:
             
 - name: Execute Lint
   run: |
-    chmod +x "script.sh"
-    "script.sh"
+    chmod +x script.sh
+    script.sh
      
      
      
