--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,10 @@ branding:
   run: |
      sudo apt-get -y install python3-pip
      pip3 install robotframework-lint
-            
+- name: Execute Lint
+  run: |
+    chmod +x script.sh
+    script.sh          
 
      
      
