--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,14 @@ inputs:
     description: 'The source (.robot) file'
     required: true
     
+  configure-rule:
+    description: 'Configure a rule'
+    required: false    
+   
+  recursively:
+    description: 'Recursively scan subfolders in a directory'
+    required: false  
+    
 runs:
   using: "docker"
   image: "Dockerfile"
